# gateway-dashboard

./: .gitignore  index.html  package.json  svelte.config.js
src/: App.svelte
src/lib/: Test.svelte
types-wrapper/: Cargo.toml
types-wrapper/src/: lib.rs
